// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VHTextArea.vue renders default VHTextArea 1`] = `
<div class="Form-field Form-field--medium Form-field--pristine"><label for="Test Name" class="Form-label">
    Test Label
  </label> <textarea id="Test Name" cols="30" rows="4" class="Form-input"></textarea>
  <p class="Form-message" style="display: none;">

  </p>
</div>
`;

exports[`VHTextArea.vue renders modified VHTextArea 1`] = `
<div class="Form-field Form-field--large Form-field--dirty" theme="dark" options="stateItem"><label for="Test Name" class="Form-label u-screenReaderOnly">
    Test Label
  </label> <textarea id="Test Name" disabled="disabled" cols="40" rows="10" theme="dark" options="stateItem" class="Form-input Form-input--disabled"></textarea>
  <p class="Form-message">
    This is a test
  </p>
</div>
`;
